<resources>
    <string name="app_name">AccountApp</string>
    <string name="action_settings">Settings</string>

    //Main Activity
    <string name="login_fragment_label">Account Login</string>
    <string name="register_fragment_label">Register New Account</string>
    <string name="login">Login</string>\
    <string name="username_hint">Username</string>\
    <string name="password_hint">Password</string>\
    <string name="password2_hint">Re-Enter Password</string>\
    <string name="register">Register</string>
    <string name="previous">Previous</string>

    //Account Activity
    <string name="dashboard_fragment_label">My Dashboard</string>
    <string name="transfer_fragment_label">Transfer</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="button_transfer">Make Transfer</string>
    <string name="summary_balance">You have</string>
    <string name="summary_balance_prefix">SGD</string>
    <string name="summary_account_no">Account No</string>
    <string name="summary_account_holder">Account Holder</string>
    <string name="summary_logout">Logout</string>
    <string name="transaction_header">Your Transaction History</string>
    <string name="summary_blank">--</string>
    <string name="title_transfer">Transfer</string>
    <string name="transfer_now">Transfer Now</string>
    <string name="amount_hint">Amount</string>\
    <string name="select_payee">Select Payee</string>\
    <string name="description_hint">Description</string>
</resources>