<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="UserAccount.DashboardFragment">

    <RelativeLayout
        android:id="@+id/summaryWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/summary_balance" />

        <TextView
            android:id="@+id/textview_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_balance"
            android:layout_margin="10dp"
            android:text="@string/summary_blank" />

        <TextView
            android:id="@+id/title_account_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_balance"
            android:layout_margin="10dp"
            android:text="@string/summary_account_no" />

        <TextView
            android:id="@+id/textview_account_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_account_no"
            android:layout_margin="10dp"
            android:text="@string/summary_blank" />

        <TextView
            android:id="@+id/title_account_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_account_no"
            android:layout_margin="10dp"
            android:text="@string/summary_account_holder" />

        <TextView
            android:id="@+id/textview_account_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_account_holder"
            android:layout_margin="10dp"
            android:text="@string/summary_blank" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactionList"
        android:layout_width="match_parent"
        android:layout_height="393dp"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/button_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/button_transfer" />

</LinearLayout>